# Veridian

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_account_security.py  003_normalize_legacy_enum_names.py
apps/api/src/veridian_api/: __init__.py  main.py
apps/api/src/veridian_api/core/: __init__.py  config.py  cors.py  deps.py  exceptions.py  logging.py  middleware.py  urls.py
apps/api/src/veridian_api/domain/: __init__.py  ai_tools.py  enums.py  file_utils.py  vcd_injection.py
apps/api/src/veridian_api/infrastructure/: __init__.py  health.py
apps/api/src/veridian_api/infrastructure/ai/: openai_client.py
apps/api/src/veridian_api/presentation/: __init__.py  exception_handlers.py
apps/api/src/veridian_api/services/: account_service.py  admin_service.py  ai_service.py  audit_service.py  auth_service.py  compilation_service.py  file_tree_service.py  job_access_service.py  project_service.py  simulation_service.py
apps/api/src/veridian_api/workers/: compile_runner.py  sim_runner.py
apps/api/tests/: conftest.py  test_account_security.py  test_ai.py  test_ai_config.py  test_ai_tools.py  test_auth.py  test_compilation.py  test_core.py  test_file_tree.py  test_health.py  test_models.py  test_project_files.py  test_projects.py  test_simulation.py  test_urls.py  test_vcd_injection.py
docker/: api.Dockerfile  web.Dockerfile
(+107 files in other folders)
