[project]
name = "veridian-api"
version = "0.1.0"
description = "Veridian backend API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "asyncpg>=0.30.0",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "greenlet>=3.1.1",
    "bcrypt>=4.2.1",
    "PyJWT>=2.10.1",
    "httpx>=0.28.1",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veridian_api"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["veridian_api"]

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
veridian-api = "veridian_api.main:run"

[tool.alembic]
script_location = "alembic"
prepend_sys_path = ["src"]
